<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_us">About us</string>
    <string name="addons">AddOns</string>
    <string name="app_name">Sac23_Rc</string>
    <string name="app_reboot_required_dialog_message">"For this action to take effect it is required to restart %1$s.

Press OK to restart now"</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="backup">Backup Restore</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="backup_complete_toast">"Backup completed successfully. The backup file can be found at
%1$s"</string>
    <string name="backup_file_prefix_date_format">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix">_RCBackup</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="carrier_mod">Carrier Mods</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_version_title">ROM version: %1$s</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="confirm_script_dialog_message">Are you sure you want to run %1$s?</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_color_summary">Automatically update background color of the status bar</string>
    <string name="dynamic_status_bar_color_title">Dynamic status bar color</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_filter_value">The intensity of the darkening filter</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="find_app">Find App</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="listview_accelerate_decelerate_interpolator">Accelerate decelerate</string>
    <string name="listview_accelerate_interpolator">Accelerate</string>
    <string name="listview_alpha">Alpha</string>
    <string name="listview_anticipate_interpolator">Anticipate</string>
    <string name="listview_anticipate_overshoot_interpolator">Anticipate overshoot</string>
    <string name="listview_bounce_interpolator">Bounce</string>
    <string name="listview_decelerate_interpolator">Decelerate</string>
    <string name="listview_fold">Fold</string>
    <string name="listview_off">Off</string>
    <string name="listview_overshoot_interpolator">Overshoot</string>
    <string name="listview_rotate">Rotate</string>
    <string name="listview_scale">Scale</string>
    <string name="listview_stack_bottom">Stack (bottom)</string>
    <string name="listview_stack_top">Stack (top)</string>
    <string name="listview_translate_left">Translate (left)</string>
    <string name="listview_translate_right">Translate (right)</string>
    <string name="listview_unfold">Unfold</string>
    <string name="listview_wave_left">Wave (left)</string>
    <string name="listview_wave_right">Wave (right)</string>
    <string name="more_options">More options</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_color_reset">Reset color</string>
    <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
    <string name="network_traffic_color_style">Color style</string>
    <string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
    <string name="network_traffic_summaryi">Enable various network traffic options in statusbar</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_titlei">Network traffic</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="no_su_dialog_message">"We could not acquire root access on your device.

Most of this app's functions can be performed without root access. However, you might experience problems with running scripts or rebooting.

We strongly recommend to allow root access on next request or allow such access in your Su client manually."</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="notification_panel_prefs">Notification panel</string>
    <string name="ok">OK</string>
    <string name="other">Other</string>
    <string name="phone_prefs">Phone Mods</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">"You have chosen to restore data from previous Rom Control preferences.

"<b>"Please note! This operation will change your device settings based on the settings stored in this file.

"<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>"

Rom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.

Please click \"CONFIRM\" to proceed or \"CANCEL\" to quit."</string>
    <string name="rom_version_for_changelog">Sac23 N7</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="sb_traffic_adv_custom_title">Adv Text Customization</string>
    <string name="sb_traffic_align_title">Traffic alignment</string>
    <string name="sb_traffic_color_title">Traffic color</string>
    <string name="sb_traffic_dont_show">"Don't Show"</string>
    <string name="sb_traffic_font_black">Black</string>
    <string name="sb_traffic_font_black_italic">Black Italic</string>
    <string name="sb_traffic_font_bold">Bold</string>
    <string name="sb_traffic_font_bold_italic">Bold Italic</string>
    <string name="sb_traffic_font_condensed">Condensed</string>
    <string name="sb_traffic_font_condensed_bold">Condensed Bold</string>
    <string name="sb_traffic_font_condensed_bold_italic">Condensed Bold Italic</string>
    <string name="sb_traffic_font_condensed_italic">Condensed Italic</string>
    <string name="sb_traffic_font_condensed_light">Condensed Light</string>
    <string name="sb_traffic_font_condensed_light_italic">Condensed Light Italic</string>
    <string name="sb_traffic_font_italic">Italic</string>
    <string name="sb_traffic_font_light">Light</string>
    <string name="sb_traffic_font_light_italic">Light Italic</string>
    <string name="sb_traffic_font_medium">Medium</string>
    <string name="sb_traffic_font_medium_italic">Medium Italic</string>
    <string name="sb_traffic_font_normal">Normal</string>
    <string name="sb_traffic_font_thin">Thin</string>
    <string name="sb_traffic_font_thin_italic">Thin Italic</string>
    <string name="sb_traffic_font_title">Traffic font</string>
    <string name="sb_traffic_left">Left</string>
    <string name="sb_traffic_line_title">Traffic style</string>
    <string name="sb_traffic_right">Right</string>
    <string name="sb_traffic_shadow_c_title">Shadow color</string>
    <string name="sb_traffic_shadow_r_title">Shadow radius</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
</resources>