<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title=" Clock / Date Mods " />
    <PreferenceScreen android:title=" Customized Ur Clock/Date Mods ">
        <PreferenceCategory android:title="Awesome Clock/Date Mods" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="ClockShown/Hide" android:key="status_bar_clock" android:defaultValue="true" android:summaryOn="Show" android:summaryOff="Hide" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="SecondsOnClock" android:key="clock_use_second" android:dependency="status_bar_clock" android:defaultValue="false" android:summaryOn="Show" android:summaryOff="Hide" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_style_entries" android:title="ClockStyle" android:key="statusbar_clock_style" android:summary="%s" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:max="23" android:title="ClockSize" android:key="statusbar_clock_font_size" android:dependency="status_bar_clock" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="ClockColorized" android:key="statusbar_clock_color" android:summary="Choose color" android:dependency="status_bar_clock" android:defaultValue="\#ffffffff" alphaSlider="true" hexValue="true" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_font_style_entries" android:title="ClockFont" android:key="statusbar_clock_font_style" android:summary="%s" android:dependency="status_bar_clock" android:defaultValue="4" android:entryValues="@array/clock_font_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_display_entries" android:title="DateFormat" android:key="statusbar_clock_date_display" android:summary="%s" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_display_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_position_entries" android:title="DateLocation" android:key="statusbar_clock_date_position" android:summary="%s" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_position_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_style_entries" android:title="DateStyle" android:key="statusbar_clock_date_style" android:summary="%s" android:dependency="status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MyEditTextPreference android:title="YourDateFormat" android:key="statusbar_clock_date_format" android:summary="write your date format" android:dependency="status_bar_clock" android:dialogTitle="Write date example EEE" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_format_entries_values" android:title="DateFormat" android:key="statusbar_clock_date_format" android:summary="%s" android:dependency="status_bar_clock" android:entryValues="@array/clock_date_format_entries_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_ampm_entries" android:title="AM/PM Style" android:key="statusbar_clock_am_pm_style" android:defaultValue="1" android:entryValues="@array/clock_ampm_values" />
    </PreferenceScreen>
    <PreferenceCategory android:title=" Statusbar Settings " />
    <PreferenceScreen android:title="Battery Settings">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Stock Battery" android:key="hide_battery_stock" android:defaultValue="true" android:summaryOn="Show" android:summaryOff="Hide" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="3MinitBattery" android:key="minit_battery_visible" android:defaultValue="false" android:summaryOn="Show" android:summaryOff="Hide" app:packageNameToKill="com.android.systemui" app:isSilent="false" />/>
<com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="Display Percentage" android:key="display_battery_percentage" android:defaultValue="0" android:summaryOn="Battery text shown" android:summaryOff="Battery text is hidden" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="Display inBattery Percentage" android:key="status_bar_show_battery_percent" android:defaultValue="1" android:summaryOn="Text shown" android:summaryOff="Text hidden" />
        <PreferenceScreen android:title="Battery Bar" android:summary="Display Line on top for battery">
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_entries" android:title="Battery Bar" android:key="battery_bar" android:summary="%s" android:defaultValue="0" android:entryValues="@array/battery_bar_values" />
            <SwitchPreference android:title="Battery bar animation" android:key="battery_bar_animate" android:defaultValue="false" android:summaryOn="Charging animation enabled" android:summaryOff="Animation disabled" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_style_entries" android:title="Battery bar style" android:key="battery_bar_style" android:summary="%s" android:defaultValue="1" android:entryValues="@array/battery_bar_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_thickness_entries" android:title="Thickness of battery bar" android:key="battery_bar_thickness" android:summary="%s" android:defaultValue="2" android:entryValues="@array/battery_bar_thickness_values" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Battery Bar Color" android:key="battery_bar_color" android:summary="Choose color of battery bar" android:defaultValue="\#ffffffff" />
        </PreferenceScreen>
        <com.wubydax.romcontrol.v2.prefs.OpenAppPreference android:title="3Minit Battery Settings" android:summary="Custom battery chooser" app:componentName="com.three.minit.minitbatterysettings.free/com.three.minit.minitbatterysettings.MainActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Trafficmeter">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/show_network_traffic_state_entries" android:title="@string/show_network_traffic_state" android:key="network_traffic_state" android:entryValues="@array/show_network_traffic_state_values" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/network_traffic_color_style" android:key="network_traffic_color" android:defaultValue="\#ffffffff" alphaSlider="true" />
        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/network_traffic_autohide" android:key="network_traffic_autohide" android:summary="@string/network_traffic_autohide_summary" android:defaultValue="false" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="@string/network_traffic_autohide_threshold" android:key="network_traffic_autohide_threshold" android:dependency="network_traffic_autohide" android:defaultValue="65" app:minValue="0" app:maxValue="100" app:unitsValue="kb/s" />
    </PreferenceScreen>
    <PreferenceCategory android:title=" Recent Panel Settings " />
    <PreferenceScreen android:title="Recent Panel Options">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="Recent Panel Quick Launch" android:key="recents_quick_launch_toggle" android:defaultValue="false" android:summaryOn="Quick Launch is shown" android:summaryOff="Quick Launch is hidden" />
    </PreferenceScreen>
    <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/toggle_entries" android:title="Visible Toggles Shown" android:key="QSPanel_NumberCount" android:summary="Number shown on screen" android:entryValues="@array/toggle_values" app:packageNameToKill="com.android.systemui" app:isSilent="false" />
    <PreferenceCategory android:title=" ListView Effects " />
    <PreferenceScreen android:title="Mokee Listview Animations">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/listview_animation_entries" android:title="Listview animation" android:key="listview_animation" android:summary="%s" android:entryValues="@array/listview_animation_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/listview_interpolator_entries" android:title="Listview interpolator" android:key="listview_interpolator" android:summary="%s" android:entryValues="@array/listview_interpolator_values" />
    </PreferenceScreen>
</PreferenceScreen>